test/testdata/classes/invalid_binary_op_error.lox
class Foo {}
Foo - 1; // error: '-' operator cannot be used with types 'class' and 'number'
